src/index.css
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');

:root {
  font-family: 'Karla', Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 62.5%;
  line-height: 24px;
  font-weight: 400;
}
*{
  box-sizing: border-box;
}
a {
  color: inherit;
  text-decoration: none;
}

.container{
  display:flex;
  flex-direction: column;
}


body {
  margin: auto auto;
  background-color: #0B2434;
  color: #2B283A;
  padding: 2rem;
}

main{
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  max-width: 800px;
  height: 450px;
  background-color: #F5F5F5;
  border-radius: .5rem;
  padding: 1.5rem;
}

.titleText{
  font-weight: 700;
  font-size: 4rem;
  line-height: 3rem;
  letter-spacing: -0.03em;
}

.text{
  font-family: Inter;
  font-style: normal;
  font-weight: 400;
  font-size: 2rem;
  line-height: 1.6rem;
  letter-spacing: -0.03em;
  color: #4A4E74;
}

button{
  background: #5035FF;
  box-shadow: 0 3.2px 7.68px rgba(0, 0, 0, 0.18);
  border-radius: .5rem;
  border: none;
  padding: 1rem 2rem;
  font-weight: 700;
  font-size: 1.6rem;
  line-height: 2rem;
  display: flex;
  align-items: center;
  text-align: center;
  color: #FFF;
}

button:hover{
  background-color: #5035ffda;
}

button:active{
  background-color: #5035ff9e;
}

/* Best score section*/

.score{
  color: #0B2434;
  font-size: 1.5rem;
  padding: 0 0 0 .75rem;
  margin: 0;
}

/*Dice stylings*/

.dice-section{
  margin-top: 3rem;
  display: grid;
  grid-template: auto auto / repeat(5, 1fr);
  gap: 20px;
}

@media screen and (max-width:380px){
  body{
    padding: .5rem;
  }
  .titleText{
    font-size: 2rem;
    margin: 0;
  }
  .text{
    font-size: 1.2rem;
  }
  .dice-section{
    grid-template: auto auto / repeat(2, 5fr);
  }
  main{
    margin: auto;
    width: 85%;
    height: 90%;
    background-color: #F5F5F5;
    border-radius: .5rem;
    justify-content: flex-start;
  }
  button{
    margin: 1rem;
  }
}

.die{
  background-color: #FFFFFF;
  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
  border-radius: .5rem; 
  height: 50px;
  width: 50px;
  cursor: pointer;
  padding: 4px;
}

.die:hover{
  background-color: #f9f7f7e8;
  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.163);

}

/* Dice face styles*/

.dot {
  display:block;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background-color:black; 
}

.die-one{
  display: flex;
  justify-content: center;
  align-items: center;
}

.die-two{
  display: flex;
  align-items: flex-start;
  justify-content : space-between;
}
.die-two >.dot:nth-of-type(2) {
  align-self: flex-end;
}

.die-three{
  display: flex;
  justify-content : space-between;
}
.die-three >.dot:nth-of-type(2) {
  align-self: center;
}
.die-three >.dot:nth-of-type(3) {
  align-self: flex-end;
}

.die-four{
  display: flex;
  justify-content: space-between;
}
.die-four>.column {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.die-five{
  display: flex;
  justify-content: space-between;
}
.die-five>.column {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.die-five>.column:nth-of-type(2){
  align-self: center;
}

.die-six{
  display: flex;
  justify-content: space-between;
}
.die-six>.column {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.dieHeld{
  background-color: #59E391;
  border-radius: .5rem;
}

.dieHeld:hover{
  background-color: #59e390a0;
}


footer{
  padding-bottom: 1rem;
  color: var(--dark-brown);
  margin:auto;
  color:#F5F5F5;
}

.profile-tags{
  display: flex;
  align-items: center;
  gap: 1rem;
  font-size: 1.8rem;
}

